--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,12 +1,34 @@
-/* Tablet Responsive CSS */
-@media (min-width: 576px) and (max-width: 768px),
-(min-width: 320px) and (max-width: 576px){
-	
+
+@media (max-width: 576px){
+	.phone-img{ position:static; width: 50%; margin: 50px auto 30px auto;}
+	.hero-content{ text-align:center; margin-top:0 }	
+	.height{ flex-direction:column-reverse; }
+	.hide-mb{ display: none; }
+	.hide-dsk{ display: block }
+	.hero-content h1{ font-size:35px }
+	.hero-content p{ margin-right:0;margin-bottom: 50px; padding: 0 45px 0 45px;}
+	.hero-content .btn-one{ font-size: 12px; margin-right: 0px;}
+	header .navbar{ padding: 25px 0;}
+	.navbar .nav-item{ text-align: center;font-size: 15px; margin-top: 30px;}
+	.nav-link{ display: inline;}
+
+	.feature-section{ border-bottom:0;background-color: #f2f2f2; }
+	.feature-section .feature-item-box p{margin:8px 8px 20px 8px}
+
+	.phone-img2{width: 50%; margin: 0 auto 30px auto;}
+
+	.phone-img3{width: 70%; margin: 0 auto 30px auto;}
+
+	.pricing-section .price-table{ margin:0 0 20px 0}
+	.ad-section p {font-size: 26px;text-align: center; margin-bottom: 24px}
+	.ad-section p span{ font-size:26px;}
+	.ad-section ul li{ text-align:center;}
+	.ad-section .btn-one{ font-size:12px;}
+	.pricing-section .order-details p{ padding: 30px 10px; }
+	.client {margin-bottom: 20px; justify-content: center;}
+	.contact-section { padding-bottom: 500px;}
+	.contact-section .from-box { width: 80%;}
+	footer {padding: 40px 0 30px 0;}
+	footer .textarea p {font-size: 16px;}
+	footer .social-media .fa {font-size: 20px; margin: 0 10px 0 10px;}
 }
-
-
-/* Mobile Responsive CSS */
-@media (min-width: 320px) and (max-width: 576px){
-	header{background-image: url(../img/banner.png); background-repeat: no-repeat; background-size:cover; background-position: center;min-height: 80vh;position: relative;}
-	header .navbar{padding: 25px 100px 25px 0px;margin-left: -10px;}
-
