--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,6 +1,6 @@
 
-@media (max-width: 576px){
-	.phone-img{ position:static; width: 50%; margin: 50px auto 30px auto;}
+@media (max-width:767px){
+	.phone-img{ position:static; width: 75%; margin: 40px auto 30px auto;}
 	.hero-content{ text-align:center; margin-top:0 }	
 	.height{ flex-direction:column-reverse; }
 	.hide-mb{ display: none; }
@@ -13,10 +13,10 @@
 	.nav-link{ display: inline;}
 
 	.feature-section{ border-bottom:0;background-color: #f2f2f2; }
-	.feature-section .feature-item-box p{margin:8px 8px 20px 8px}
+	.feature-section .feature-item-box p{margin:8px 8px 30px 8px}
 
 	.phone-img2{width: 50%; margin: 0 auto 30px auto;}
-
+	.about-section p { margin-bottom: 26px;}
 	.phone-img3{width: 70%; margin: 0 auto 30px auto;}
 
 	.pricing-section .price-table{ margin:0 0 20px 0}
@@ -31,4 +31,21 @@
 	footer {padding: 40px 0 30px 0;}
 	footer .textarea p {font-size: 16px;}
 	footer .social-media .fa {font-size: 20px; margin: 0 10px 0 10px;}
+}
+
+@media (max-width: 576px){
+	
+}
+
+@media (max-width: 425px){
+	.hero-content h1{ font-size:28px; }
+	.hero-content p{ padding: 0 15px 0 15px;}
+	.feature-section h1{ font-size:28px }
+}
+
+
+@media ( max-width: 320px){
+	.hero-content h1{font-size:22px; }
+	.hero-content p{padding: 0;}
+	.feature-section h1{ font-size:24px }
 }
